syntax = "proto3";

option csharp_namespace = "DiscountServiceGrpc";

package discount;

service Discount {
  rpc Generate (GenerateRequest) returns (GenerateResponse);
  rpc UseCode (UseCodeRequest) returns (UseCodeResponse);
}

message GenerateRequest {
  uint32 count = 1;
  uint32 length = 2;
}

message GenerateResponse {
  bool result = 1;
}

message UseCodeRequest {
  string code = 1;
}

message UseCodeResponse {
  bool result = 1;
}
